--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
    <h1>git e github</h1>
    <p>aprendendo git</p>
-   <img src="https://s2.glbimg.com/o-hfz3olMwa44DIKzNuPQ0tRQLs=/0x0:500x328/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_cf9d035bf26b4646b105bd958f32089d/internal_photos/bs/2022/B/y/gIb9NYRPaO8whXhuhYBg/tow-mater.jpg"alt=""> 
+   <img src="orangutango.jpg""> 
 </body>
 </html>
